demoproj/base/demo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoproj
spec:
  replicas: 2
  revisionHistoryLimit: 1
  progressDeadlineSeconds: 30
  selector:
    matchLabels:
      app: demoproj
  template:
    metadata:
      labels:
        app: demoproj
    spec:
      containers:
      - name: demoproj
        image: dhpup/demoproj
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
