demoproj/base/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoproj
  labels:
    app: demoproj
spec:
  selector:
    app: demoproj
  ports:
  - port: 80
