demoproj/base/demo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoproj
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - secretName: demoproj-tls
    hosts:
    - demoproj.demo.akuity.io
  rules:
  - host: demoproj.demo.akuity.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoproj
            port:
              number: 80
